Minor CSS fix for categories list on mobile devices Closes #1386

--- a/core/css/wpbdp.css
+++ b/core/css/wpbdp.css
@@ -336,6 +336,7 @@ ul.wpbdp-categories > li {
 @media screen and (max-width: 704px) {
     ul.wpbdp-categories > li {
         float: none;
+        width: initial;
     }
 }
 
